# Project_Ayassek

./: .env.example  .gitignore  Dockerfile  Dockerfile.sandbox  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  pyproject.toml  run.py
ayassek/config/: defaults.yaml  settings.py
ayassek/core/: brain.py  bus.py  context.py  events.py  nrs.py
ayassek/interfaces/web/: app.py
ayassek/interfaces/web/routes/: brain.py  chat.py  config.py  memory.py  providers.py  rag.py  system.py  voice.py  workflow.py
ayassek/memory/: chunker.py  embeddings.py  graph_db.py  ingest.py  manager.py  neural.py  rag.py  reranker.py  second_brain.py  short_term.py  vector_db.py
ayassek/memory/voice/: __init__.py  stt.py  tts.py  vad.py
ayassek/providers/: base.py  manager.py  nim.py  ollama_.py  openai_.py  registry.py  vllm_.py
ayassek/reasoning/: executor.py  planner.py  reflection.py  workflow.py
ayassek/tools/: base.py  registry.py
ayassek/tools/builtins/: browser_tool.py  code_tool.py  file_tools.py  memory_tools.py  system_.py  voice_tools.py  web_tools.py
ayassek/utils/: logging.py
frontend/: .prettierrc  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CreateEntityDialog.tsx  ErrorBoundary.tsx  FactEditor.tsx  IngestionProgress.tsx  ModelSelector.tsx  PdfIngestDialog.tsx  QueryTester.tsx  RagStatusCard.tsx  ReconcileDialog.tsx  SearchBar.tsx  SessionSidebar.tsx  Sidebar.tsx  Timeline.tsx
frontend/src/contexts/: WebSocketProvider.tsx
frontend/src/hooks/: useAudioRecorder.ts  useNRSRealtime.ts  useWebSocket.ts
frontend/src/panels/: ChatPanel.tsx  NRSPanel.tsx  RagPanel.tsx  SettingsPanel.tsx
frontend/src/store/: chat.ts  nrs.ts  rag.ts  secondBrain.ts
frontend/ts/: main.ts
scripts/: install.sh  preload_models.py
(+6 files in other folders)
