[project]
name = "ayassek"
version = "1.0.0"
description = "Multimodal General Brain Agent — AI assistant with memory, voice, vision, and code execution"
requires-python = ">=3.11,<3.15"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "playwright>=1.50.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "websockets>=13.0",
    "python-multipart>=0.0.9",
    "duckduckgo-search>=6.0",
    "psutil>=5.9.0",
    "chromadb>=1.0.0",
    "lancedb>=0.6.0",
    "pyarrow>=15.0.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.51.0",
    "torch>=2.5.0",
    "pdfplumber>=0.11.0",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "silero-vad>=5.0.0",
    "apscheduler>=3.10.0",
    "opencv-python-headless>=4.11.0",
    "einops>=0.8.0",
    "filetype>=1.2.0",
    "ftfy>=6.1.0",
    "markdown2>=2.5.0",
    "markdownify>=1.1.0",
    "rapidfuzz>=3.8.0",
    "pypdfium2>=4.30.0",
    "pdftext>=0.6.3",
    "platformdirs>=4.3.0",
    "spacy>=3.8,<3.9",
    "thinc>=8.3,<8.4",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.1.1",
    "soundfile>=0.12.0",
    "kokoro>=0.9.4",
    "misaki[en]>=0.9.4",
]
marker = [
    "marker-pdf>=1.0.0",
    "surya-ocr>=0.17.0",
]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
all = [
    "ayassek[voice,marker,dev]",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["ayassek"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
